--- a/package.json
+++ b/package.json
@@ -1,43 +1,57 @@
 {
-  "name": "mynewproject",
-  "main": "expo-router/entry",
-  "version": "1.0.0",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "test": "jest --watchAll"
-  },
-  "jest": {
-    "preset": "jest-expo"
-  },
-  "dependencies": {
-    "@expo/vector-icons": "^14.0.2",
-    "@react-navigation/native": "^6.0.2",
-    "expo": "~51.0.21",
-    "expo-font": "~12.0.9",
-    "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.18",
-    "expo-splash-screen": "~0.27.5",
-    "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.7",
-    "expo-web-browser": "~13.0.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.3",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
-    "jest": "^29.2.1",
-    "jest-expo": "~51.0.3",
-    "react-test-renderer": "18.2.0",
-    "typescript": "~5.3.3"
-  },
-  "private": true
+	"name": "mynewproject",
+	"main": "expo-router/entry",
+	"version": "1.0.0",
+	"scripts": {
+		"start": "expo start",
+		"android": "expo run:android",
+		"ios": "expo run:ios",
+		"web": "expo start --web",
+		"test": "jest --watchAll"
+	},
+	"jest": {
+		"preset": "jest-expo"
+	},
+	"dependencies": {
+		"@clerk/clerk-expo": "^1.2.5",
+		"@expo/vector-icons": "^14.0.2",
+		"@react-native-google-signin/google-signin": "^12.2.1",
+		"@react-native-voice/voice": "^3.2.4",
+		"@react-navigation/native": "^6.0.2",
+		"axios": "^1.7.2",
+		"expo": "^51.0.0",
+		"expo-auth-session": "~5.5.2",
+		"expo-crypto": "~13.0.2",
+		"expo-dev-client": "~4.0.20",
+		"expo-font": "~12.0.9",
+		"expo-linking": "~6.3.1",
+		"expo-router": "~3.5.18",
+		"expo-secure-store": "^13.0.2",
+		"expo-speech": "~12.0.2",
+		"expo-splash-screen": "~0.27.5",
+		"expo-status-bar": "~1.12.1",
+		"expo-system-ui": "~3.0.7",
+		"expo-web-browser": "~13.0.3",
+		"franc": "^6.2.0",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"react-native": "0.74.3",
+		"react-native-gesture-handler": "~2.16.1",
+		"react-native-gif": "^1.0.3",
+		"react-native-loading-spinner-overlay": "^3.0.1",
+		"react-native-quick-base64": "^2.1.2",
+		"react-native-reanimated": "~3.10.1",
+		"react-native-safe-area-context": "4.10.5",
+		"react-native-screens": "3.31.1",
+		"react-native-web": "~0.19.10"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.20.0",
+		"@types/react": "~18.2.45",
+		"jest": "^29.2.1",
+		"jest-expo": "~51.0.3",
+		"react-test-renderer": "18.2.0",
+		"typescript": "~5.3.3"
+	},
+	"private": true
 }
