--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"expo-web-browser": "~13.0.3",
 		"franc": "^6.2.0",
 		"i": "^0.3.7",
+		"lucide-react-native": "^0.418.0",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-native": "0.74.3",
@@ -48,6 +49,7 @@
 		"react-native-root-toast": "^3.6.0",
 		"react-native-safe-area-context": "4.10.5",
 		"react-native-screens": "3.31.1",
+		"react-native-svg": "^15.4.0",
 		"react-native-web": "~0.19.10"
 	},
 	"devDependencies": {
