--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
 	"expo": {
-		"name": "MyNewProject",
-		"slug": "MyNewProject",
+		"name": "LearnifyAI",
+		"slug": "LearnifyAI",
 		"version": "1.0.0",
 		"orientation": "portrait",
 		"icon": "./assets/images/logo.png",
@@ -17,16 +17,16 @@
 		},
 		"android": {
 			"adaptiveIcon": {
-				"foregroundImage": "./assets/images/adaptive-icon.png",
+				"foregroundImage": "./assets/images/logo.png",
 				"backgroundColor": "#ffffff"
 			},
 			"permissions": ["android.permission.RECORD_AUDIO"],
-			"package": "com.rik2003.MyNewProject"
+			"package": "com.rik2003.learnifyai"
 		},
 		"web": {
 			"bundler": "metro",
 			"output": "static",
-			"favicon": "./assets/images/favicon.png"
+			"favicon": "./assets/images/logo2.png"
 		},
 		"plugins": ["expo-router", "@react-native-voice/voice", "expo-image-picker"],
 		"experiments": {
