--- a/package.json
+++ b/package.json
@@ -36,13 +36,14 @@
 		"expo-system-ui": "~3.0.7",
 		"expo-web-browser": "~13.0.3",
 		"franc": "^6.2.0",
-		"i": "^0.3.7",
 		"lucide-react-native": "^0.418.0",
+		"nativewind": "^4.0.1",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-native": "0.74.3",
 		"react-native-gesture-handler": "~2.16.1",
 		"react-native-gif": "^1.0.3",
+		"react-native-linear-gradient": "^2.8.3",
 		"react-native-loading-spinner-overlay": "^3.0.1",
 		"react-native-quick-base64": "^2.1.2",
 		"react-native-reanimated": "~3.10.1",
@@ -57,7 +58,10 @@
 		"@types/react": "~18.2.45",
 		"jest": "^29.2.1",
 		"jest-expo": "~51.0.3",
+		"prettier": "^3.3.3",
+		"prettier-plugin-tailwindcss": "^0.6.5",
 		"react-test-renderer": "18.2.0",
+		"tailwindcss": "^3.4.7",
 		"typescript": "~5.3.3"
 	},
 	"private": true
