--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"android": "expo run:android",
 		"ios": "expo run:ios",
 		"web": "expo start --web",
-		"test": "jest --watchAll"
+		"test": "jest --watchAll",
+		"build": "expo build:web"
 	},
 	"jest": {
 		"preset": "jest-expo"
@@ -16,6 +17,7 @@
 		"@clerk/clerk-expo": "^1.2.5",
 		"@expo/config-plugins": "^8.0.8",
 		"@expo/vector-icons": "^14.0.2",
+		"@expo/webpack-config": "^0.17.0",
 		"@react-native-google-signin/google-signin": "^12.2.1",
 		"@react-native-voice/voice": "^3.2.4",
 		"@react-navigation/native": "^6.0.2",
@@ -51,7 +53,7 @@
 		"react-native-safe-area-context": "4.10.5",
 		"react-native-screens": "3.31.1",
 		"react-native-svg": "^15.4.0",
-		"react-native-web": "~0.19.10"
+		"react-native-web": "~0.18.9"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.20.0",
