--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
 	"expo": {
 		"name": "LearnifyAI",
-		"slug": "LearnifyAI",
+		"slug": "20002d96-ea70-405f-9d4f-5b1de53f2ffc",
 		"version": "1.0.0",
 		"orientation": "portrait",
 		"icon": "./assets/images/logo.png",
