--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
 		"android": "expo run:android",
 		"ios": "expo run:ios",
 		"web": "expo start --web",
-		"test": "jest --watchAll",
-		"build": "expo build:web"
+		"test": "jest --watchAll"
 	},
 	"jest": {
 		"preset": "jest-expo"
