--- a/eas.json
+++ b/eas.json
@@ -7,6 +7,13 @@
 		"preview": {
 			"distribution": "internal"
 		},
-		"production": {}
+		"production": {
+			"android": {
+				"buildType": "apk"
+			},
+			"env": {
+				"EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY": "pk_test_d29uZHJvdXMtbHlueC02OS5jbGVyay5hY2NvdW50cy5kZXYk"
+			}
+		}
 	}
 }
