--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"react-native-gif": "^1.0.3",
 		"react-native-linear-gradient": "^2.8.3",
 		"react-native-loading-spinner-overlay": "^3.0.1",
+		"react-native-markdown-display": "^7.0.2",
 		"react-native-quick-base64": "^2.1.2",
 		"react-native-reanimated": "~3.10.1",
 		"react-native-root-toast": "^3.6.0",
